--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://static.toss.im/tps/main.css");
+@import url("https://static.toss.im/tps/others.css");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -8,6 +10,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  /* color */
   --color-background: var(--background);
   --color-background-toss: var(--background-toss);
   --color-background-toss-secondary: var(--background-toss-secondary);
@@ -53,6 +56,12 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  /* text */
+  --text-toss-xs: 12px;
+  --text-toss-sm: 13px;
+  --text-toss-md: 14px;
+  --text-toss-lg: 15px;
+  --text-toss-xl: 20px;
 }
 
 :root {
@@ -138,9 +147,6 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
-
-@import url("https://static.toss.im/tps/main.css");
-@import url("https://static.toss.im/tps/others.css");
 
 @layer base {
   * {
