--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --color-background: var(--background);
   --color-background-toss: var(--background-toss);
   --color-background-toss-secondary: var(--background-toss-secondary);
+  --color-background-toss-tertiary: var(--background-toss-tertiary);
   --color-background-toss-bull: var(--background-toss-bull);
   --color-background-toss-bear: var(--background-toss-bear);
   --color-background-toss-brand: var(--background-toss-brand);
@@ -100,16 +101,16 @@
   /* cryptoss design */
   --background-toss: oklch(0.21 0.0098 285.51);
   --background-toss-secondary: oklch(0.3 0.018 289.85);
+  --background-toss-tertiary: oklch(0.42 0.0197 285.53);
   --background-toss-bear: oklch(0.47 0.1543 20.34);
   --background-toss-bull: oklch(0.56 0.1759 258.67);
+  --background-toss-brand: oklch(0.63 0.1915 258.27);
+  --background-toss-warn: oklch(0.64 0.2093 20.98);
   --text-toss: oklch(0.92 0.0013 286.37);
   --text-toss-bull: oklch(0.64 0.2093 20.66);
   --text-toss-bear: oklch(0.63 0.1915 258.27);
   --text-toss-secondary: oklch(0.82 0.0042 286.31);
   --text-toss-ticker: oklch(0.6 0.0135 285.98);
-  --background-toss-brand: oklch(0.63 0.1915 258.27);
-  --background-toss-warn: oklch(0.64 0.2093 20.98);
-  --background-toss-tertiary: oklch(0.42 0.0197 285.53);
   --icon-toss-success: oklch(0.71 0.1599 159.43);
   --icon-toss-error: oklch(0.6 0.2394 26.96);
 }
@@ -154,6 +155,19 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .col {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
